--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4669,4 +4669,13 @@ ul li a.sc_facebook{
 	border-radius: 55px;
 }
 
-ul li a
+span.skills{
+	display: inline-block;
+	padding: 6px;
+	background-color: #ff6b02;
+	color: white;
+	border-radius: 15px;
+	margin: 5px;
+
+}
+
