update color skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4672,7 +4672,7 @@ ul li a.sc_facebook{
 span.skills{
 	display: inline-block;
 	padding: 6px;
-	background-color: #ff6b02;
+	background-color: #025cff;
 	color: white;
 	border-radius: 15px;
 	margin: 5px;
